# hacspec-fork

./: Cargo.toml
examples/linalg/: Cargo.toml
examples/linalg/src/: linalg.rs
examples/ristretto/src/: ristretto.rs
lib/src/: bigint_integers.rs  prelude.rs
utils/secret-integers/src/: lib.rs
