[package]
name = "hacspec-linalg"
version = "0.1.0"
authors = ["Rasmus Kirk <mail@rasmuskirk.com>"]
edition = "2018"

[lib]
path = "src/linalg.rs"

[dependencies]
hacspec-lib = { path = "../../lib" }

[dev-dependencies]
hacspec-dev = { path = "../../utils/dev" }
quickcheck = "1"
ndarray = "0.15"
rand = "0.8"
